<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f6f6f6"
    android:orientation="vertical">

    <com.angelatech.yeyelive.view.HeaderLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/color_grey_d5" />

    <EditText
        android:id="@+id/ed_old_password"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/color_ffffff"
        android:gravity="left|center"
        android:hint="@string/old_password"
        android:paddingLeft="16dp"
        android:inputType="textPassword"
        android:textColorHint="@color/color_a6a6a6"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_grey_d5" />

    <EditText
        android:id="@+id/ed_new_password"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/color_ffffff"
        android:gravity="left|center"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:textColorHint="@color/color_a6a6a6"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_grey_d5" />

    <EditText
        android:id="@+id/Confirm_password"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/color_ffffff"
        android:gravity="left|center"
        android:hint="@string/Confirm_password"
        android:paddingLeft="16dp"
        android:inputType="textPassword"
        android:textColorHint="@color/color_a6a6a6"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_grey_d5" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/password_gz"
        android:textColor="@color/color_a6a6a6"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_view_border"
        android:gravity="center"
        android:text="@string/confirm_changes" />
</LinearLayout>