<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f6f6f6"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.angelatech.yeyelive.view.HeaderLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_grey_d5" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:paddingTop="63dp"
        android:src="@drawable/bg_about_logo" />

    <TextView
        android:id="@+id/versionCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="27dp"
        android:paddingTop="40dp" />

    <LinearLayout
        android:id="@+id/btn_agreement"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:background="@color/color_ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="18dp"
            android:text="@string/lisence_hint"
            android:textColor="@color/color_232323" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:paddingRight="14dp"
            android:src="@drawable/btn_next" />
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/about_us_qq"
        android:textColor="@color/color_9F9F9F" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/about_us_secret_sign"
        android:textColor="@color/color_9F9F9F" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/copyright"
        android:textColor="@color/color_9F9F9F"/>
</LinearLayout>