<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f9f9f9"
    android:orientation="vertical">

    <com.angelatech.yeyelive.view.HeaderLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:background="@color/color_f6f6f6">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/icon_sand_gold" />

            <TextView
                android:id="@+id/recharge_balance_coin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/balance"
                android:textColor="@color/color_a1d4ff"
                android:textSize="15dp" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/color_ffffff"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/select_coin"
            android:textColor="@color/color_999999" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_grey_d5" />

    <ListView
        android:id="@+id/recharge_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scrollbars="none" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="63dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/btn_submit_pay"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="21dp"
            android:background="@drawable/text_view_border"
            android:gravity="center"
            android:text="@string/button_top_up_submit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="12dp"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:text="@string/text_desc"
            android:textColor="@color/color_999999"
            android:textSize="13dp"

            />
    </LinearLayout>
</LinearLayout>