<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.angelatech.yeyelive.view.HeaderLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_grey_d5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:contentDescription="@null"
            android:src="@drawable/bg_feedback_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:paddingRight="3dp"
            android:text="@string/feedback_prompt"
            android:textColor="@color/color_black"
            android:textSize="12sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="20dp"
        android:background="@color/color_grey_d5" />

    <EditText
        android:id="@+id/et_feedback"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/feedback_edit_hint"
        android:maxLength="1000"
        android:maxLines="5"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_input_limit"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginRight="15dp"
        android:gravity="end"
        android:text="200" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/color_grey_d5" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="16dp"
        android:text="@string/feedback_phone_mail_prompt"
        android:textColor="@color/color_black"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/et_phone_mail"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:gravity="start|center"
        android:hint="@string/feedback_phone_mail_edit_hint"
        android:inputType="text"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/color_grey_d5" />

</LinearLayout>