<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="30dp"
            android:text="@string/dialog_tickets"
            android:textColor="@color/color_666666"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="75dp"
            android:layout_marginTop="30dp"
            android:background="@color/color_f9f9f9"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingTop="18dp"
                android:src="@drawable/icon_tickets_golds_big" />

            <TextView
                android:id="@+id/tv_pay_coin"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="18dp"
                android:text="50"
                android:textColor="@color/color_eecc1b"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/light_gray_2"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/color_999999" />

            <TextView
                android:id="@+id/tv_go_pay"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/color_d80c18"
                android:gravity="center"
                android:text="@string/dialog_go_play"
                android:textColor="@color/color_white" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>